--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
         </h1>
         <!-- <div class="kv-img"></div> -->
       </div>
-      <div class="scrolldown2"><span>Scroll</span></div>
+      <div class="scrolldown2 m-auto"><span>Scroll</span></div>
     </header>
 
     <main style="font-family: Josefin Sans">
@@ -230,7 +230,7 @@
       style="height: 6rem"
       id="footer"
     >
-      <p id="page-top"><a href="#">Page Top</a></p>
+      <p id="page-top" class="m-auto"><a href="#">Page Top</a></p>
       <small class="text-white">&copy; yu-rimasui</small>
     </footer>
     <script
