--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
         <p class="p-4 fs-1">
           If you don’t like where you are, change it. You’re not a tree.
         </p>
-        <div class="p-4">
+        <div class="m-0">
           <!-- カード(ASC) -->
           <article class="card my-3" style="max-width: 40rem">
             <img src="img/work01.jpg" class="card-img-top" alt="..." />
@@ -152,7 +152,7 @@
               >
             </div>
           </article>
-          <article class="card my-3" style="max-width: 40rem">
+          <article class="card my-3" style="min-width: 18rem">
             <img src="img/work02.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Cafe Site</h5>
