--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
               >
             </div>
           </article>
-          <article class="card my-3" style="min-width: 18rem">
+          <article class="card my-3" style="max-width: 40rem">
             <img src="img/work02.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Cafe Site</h5>
