--- a/src/index.html
+++ b/src/index.html
@@ -225,13 +225,14 @@
       </div>
     </main>
 
-    <footer
-      class="bg-dark d-flex justify-content-center align-items-center"
-      style="height: 6rem"
-      id="footer"
-    >
+    <footer class="bg-dark" style="height: 6rem" id="footer">
       <p id="page-top" class="m-auto"><a href="#">Page Top</a></p>
-      <small class="text-white">&copy; yu-rimasui</small>
+      <div
+        class="d-flex justify-content-center align-items-center"
+        style="height: 6rem"
+      >
+        <small class="text-white">&copy; yu-rimasui</small>
+      </div>
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
