--- a/src/index.html
+++ b/src/index.html
@@ -228,7 +228,7 @@
     <footer class="bg-dark" style="height: 6rem" id="footer">
       <p id="page-top" class="m-auto"><a href="#">Page Top</a></p>
       <div
-        class="d-flex justify-content-center align-items-center"
+        class="mb-0 d-flex justify-content-center align-items-center"
         style="height: 6rem"
       >
         <small class="text-white">&copy; yu-rimasui</small>
