--- a/src/index.html
+++ b/src/index.html
@@ -223,16 +223,17 @@
           </article>
         </div>
       </div>
+
+      <!-- page top -->
+      <p id="page-top" class="m-auto"><a href="#">Page Top</a></p>
     </main>
 
-    <footer class="bg-dark" style="height: 6rem" id="footer">
-      <p id="page-top" class="m-auto"><a href="#">Page Top</a></p>
-      <div
-        class="mb-0 d-flex justify-content-center align-items-center"
-        style="height: 6rem"
-      >
-        <small class="text-white">&copy; yu-rimasui</small>
-      </div>
+    <footer
+      class="bg-dark d-flex justify-content-center align-items-center"
+      style="height: 6rem"
+      id="footer"
+    >
+      <small class="text-white">&copy; yu-rimasui</small>
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
