--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,9 @@
                 <a class="nav-link" aria-current="page" href="#works">works</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="mailto:usagi.y12@gmail.com"
+                  >Contact</a
+                >
               </li>
               <li class="nav-item pt-3">
                 <a
@@ -104,27 +106,22 @@
         <p class="p-4 fs-1">
           Try not become a man of success but rather to become a man of value.
         </p>
-        <div class="aboutimg my-5">
-          <img
-            src="img/about.jpg"
-            alt="about me"
-            width="600px"
-            height="400px"
-          />
-        </div>
-        <div class="px-4">
-          <p>　増井 夕莉</p>
-          <p>
-            ・東京出身の21歳。<br />
-            ・自分の作りたいものを、企画して、仕組みを考え、実装していく流れと、
-            完成したときの達成感が好き。<br />
-            ・現在は、リマインダーアプリをつくってて、FireBaseに苦戦中。<br />
-            ・ReactNativeも勉強し始めました。
-          </p>
-          <p class="pt-5">　使用言語は…</p>
-          <p>
-            HTML, CSS, JavaScript, React, TypeScript, Nodejs, MySQL, AWS 等<br />
-          </p>
+        <div class="card my-3" style="max-width: 40rem">
+          <img src="img/about.jpg" class="card-img-top" alt="about me" />
+          <div class="card-body">
+            <p>　増井 夕莉</p>
+            <p>
+              ・東京出身の21歳。<br />
+              ・自分の作りたいものを、企画して、仕組みを考え、実装していく流れと、
+              完成したときの達成感が好き。<br />
+              ・現在は、リマインダーアプリをつくってて、FireBaseに苦戦中。<br />
+              ・ReactNativeも勉強し始めました。
+            </p>
+            <p class="pt-4">　使用言語は…</p>
+            <p>
+              HTML, CSS, JavaScript, React, TypeScript, Nodejs, MySQL, AWS 等<br />
+            </p>
+          </div>
         </div>
       </div>
 
