--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           The development of IoT brings the world closer to the future.
         </p>
         <div class="py-5">
-          <img class="r_img" src="img/about.jpg" alt="..." />
+          <img class="r_img" src="src/img/about.jpg" alt="..." />
         </div>
         <div class="px-4 pb-5 mb-5">
           <h5 class="pb-3">「私について」</h5>
@@ -127,6 +127,48 @@
           <p>
             ・動的なWebアプリケーションの構築が可能で、ユーザーとのインタラクションを実装します。
           </p>
+
+          <h5 class="pt-5 pb-3">「スキル」</h5>
+          <h6>マークアップ言語</h6>
+          <table class="m-3">
+            <tr>
+              <th>スキル</th>
+              <th>レベル</th>
+              <th>経験年数</th>
+            </tr>
+            <tr>
+              <td>HTML5</td>
+              <td>★★★★☆</td>
+              <td>2年</td>
+            </tr>
+            <tr>
+              <td>CSS3</td>
+              <td>★★★☆☆</td>
+              <td>2年</td>
+            </tr>
+          </table>
+          <h6>フロントエンド</h6>
+          <table class="m-3">
+            <tr>
+              <th>スキル</th>
+              <th>レベル</th>
+              <th>経験年数</th>
+            </tr>
+            <tr>
+              <td>JavaScript</td>
+              <td>★★★★☆</td>
+              <td>1～2年</td>
+            </tr>
+            <tr>
+              <td>CSS3</td>
+              <td>★★★☆☆</td>
+              <td>2年</td>
+            </tr>
+          </table>
+
+          <p>
+            ・動的なWebアプリケーションの構築が可能で、ユーザーとのインタラクションを実装します。
+          </p>
         </div>
       </div>
 
@@ -140,9 +182,9 @@
         <div class="p-4 r_card">
           <!-- カード(ASC) -->
           <article class="card my-3">
-            <img src="img/work01.jpg" class="card-img-top" alt="..." />
+            <img src="src/img/work01.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title ff_JS">Portfolio ver.02</h5>
+              <h5 class="card-title fw-bold ff_JS">Portfolio ver.02</h5>
               <p class="card-text">
                 自身のポートフォリオ。HTML5/CSS3/JavaScriptを使用し、レスポンシブにも配慮した作品です。<br />
                 実は、<a
@@ -150,7 +192,7 @@
                   class="btn-outline-dark"
                   target="_blank"
                   >ver.01</a
-                >もあるんです、初めての作品です。
+                >もあるんです、初めての作品です🔰
               </p>
               <a
                 href="https://yu-rimasui.github.io/work07-portfolio2/"
@@ -161,15 +203,16 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="img/work02.jpg" class="card-img-top" alt="..." />
+            <img src="src/img/work02.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title ff_JS">Cafe Site</h5>
+              <h5 class="card-title fw-bold ff_JS">Cafe Site</h5>
               <p class="card-text">
-                空想カフェのホームページ。<br />
-                お母さんの夢、いつか実現させてあげたい。
+                古民家カフェのホームページです。<br />
+                好みの雰囲気を創造しながら作成しました。<br />
+                お母さんの夢、いつか実現させてあげたい🙄
               </p>
               <a
-                href="https://yu-rimasui.github.io/chi-cafe/"
+                href="https://yu-rimasui.github.io/work03_chi-cafe/"
                 class="btn btn-outline-dark"
                 target="_blank"
                 >Take a look ☕</a
@@ -177,15 +220,15 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="img/work03.jpg" class="card-img-top" alt="..." />
+            <img src="src/img/work03.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title ff_JS">Calculator</h5>
+              <h5 class="card-title fw-bold ff_JS">Calculator</h5>
               <p class="card-text">
-                React勉強したくてつくった初めてのWebアプリ。<br />
-                電卓以外の要素にこだわってしまいました笑
+                遊び心で作成した電卓アプリです。<br />
+                本来の電卓にはない不思議なボタンを盛り込みました。ぜひ押してみてください🎵
               </p>
               <a
-                href="https://yu-rimasui.github.io/calculator/"
+                href="https://yu-rimasui.github.io/work04_calculator/"
                 class="btn btn-outline-dark"
                 target="_blank"
                 >Take a look 👀
@@ -193,15 +236,13 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="img/work04.jpg" class="card-img-top" alt="..." />
+            <img src="src/img/work04.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title ff_JS">Weekly Calendar</h5>
+              <h5 class="card-title fw-bold ff_JS">Weekly schedule</h5>
               <p class="card-text">
-                初めてCRUDを意識してつくったアプリ。<br />
-                一週間の予定を、時間割アプリのように管理するアプリ。<br />
-                デザインも気に入ってないし、データベースにつなげて
-                端末ごとに表示できるようにしたい。<br />
-                課題残ってます。。
+                週間予定を管理できるアプリです。<br />
+                イベントバッチの表示方法やイベントの色は、特にこだわりました。<br />
+                リンクでは、WebAPIを使用しており、Web上でのCRUD操作が可能です。ぜひお試しください✨
               </p>
               <a
                 href="https://yu-rimasui.github.io/scheduleApp/"
@@ -212,9 +253,9 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="img/work05.jpg" class="card-img-top" alt="..." />
+            <img src="src/img/work05.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title ff_JS">Reminder App</h5>
+              <h5 class="card-title fw-bold ff_JS">Reminder App</h5>
               <p class="card-text">
                 卒業制作（未完成）<br />
                 タスク管理する管理者と、タスクを閲覧するユーザーに機能が分かれていて、
