organize directory 2nd

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           The development of IoT brings the world closer to the future.
         </p>
         <div class="py-5">
-          <img class="r_img" src="src/img/about.jpg" alt="..." />
+          <img class="r_img" src="img/about.jpg" alt="..." />
         </div>
         <div class="px-4 pb-5 mb-5">
           <h5 class="pb-3">「私について」</h5>
@@ -182,7 +182,7 @@
         <div class="p-4 r_card">
           <!-- カード(ASC) -->
           <article class="card my-3">
-            <img src="src/img/work01.jpg" class="card-img-top" alt="..." />
+            <img src="img/work01.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title fw-bold ff_JS">Portfolio ver.02</h5>
               <p class="card-text">
@@ -203,7 +203,7 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="src/img/work02.jpg" class="card-img-top" alt="..." />
+            <img src="img/work02.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title fw-bold ff_JS">Cafe Site</h5>
               <p class="card-text">
@@ -220,7 +220,7 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="src/img/work03.jpg" class="card-img-top" alt="..." />
+            <img src="img/work03.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title fw-bold ff_JS">Calculator</h5>
               <p class="card-text">
@@ -236,7 +236,7 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="src/img/work04.jpg" class="card-img-top" alt="..." />
+            <img src="img/work04.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title fw-bold ff_JS">Weekly schedule</h5>
               <p class="card-text">
@@ -253,7 +253,7 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="src/img/work05.jpg" class="card-img-top" alt="..." />
+            <img src="img/work05.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title fw-bold ff_JS">Reminder App</h5>
               <p class="card-text">
