--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>masui.y's portfolio</title>
     <meta name="description" content="masui.yのポートフォリオです。" />
     <!-- favicon -->
-    <link rel="icon" href="" type="image/png" />
+    <link rel="icon" href="src/img/favicon.png" type="image/png" />
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,14 +16,14 @@
     />
     <!-- meta -->
     <meta name="format-detection" content="telephone=no" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="favicon.png" type="image/png" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="webclip.png" />
     <!-- CSS -->
-    <link rel="stylesheet" href="/src/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="/src/css/scroll.css" />
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="src/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="src/css/scroll.css" />
+    <link rel="stylesheet" type="text/css" href="src/css/pagetop.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
     <!-- Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -102,7 +102,7 @@
           The development of IoT brings the world closer to the future.
         </p>
         <div class="py-5">
-          <img class="r_img" src="img/about.jpg" alt="..." />
+          <img class="r_img" src="src/img/about.jpg" alt="..." />
         </div>
         <div class="px-4 pb-5 mb-5">
           <h5 class="pb-3">「私について」</h5>
@@ -182,7 +182,7 @@
         <div class="p-4 r_card">
           <!-- カード(ASC) -->
           <article class="card my-3">
-            <img src="img/work01.jpg" class="card-img-top" alt="..." />
+            <img src="src/img/work01.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title fw-bold ff_JS">Portfolio ver.02</h5>
               <p class="card-text">
@@ -203,7 +203,7 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="img/work02.jpg" class="card-img-top" alt="..." />
+            <img src="src/img/work02.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title fw-bold ff_JS">Cafe Site</h5>
               <p class="card-text">
@@ -220,7 +220,7 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="img/work03.jpg" class="card-img-top" alt="..." />
+            <img src="src/img/work03.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title fw-bold ff_JS">Calculator</h5>
               <p class="card-text">
@@ -236,7 +236,7 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="img/work04.jpg" class="card-img-top" alt="..." />
+            <img src="src/img/work04.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title fw-bold ff_JS">Weekly schedule</h5>
               <p class="card-text">
@@ -253,7 +253,7 @@
             </div>
           </article>
           <article class="card my-3">
-            <img src="img/work05.jpg" class="card-img-top" alt="..." />
+            <img src="src/img/work05.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title fw-bold ff_JS">Reminder App</h5>
               <p class="card-text">
