--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             ・1年間通ったプログラミングスクールを通して、Web制作のスキルを身に着けました。<br />
             ・現在は、長期インターンでスキルを活かしながら働いています。
           </p>
-          <h6>HCIに関連する研究分野で院進予定</h6>
+          <h6>HCIに関連する研究分野で院進目標</h6>
           <p>
             ・人とテクノロジーのインターフェースに興味を持ち、ユーザー体験を深く考えています。<br />
             ・新しい技術やトレンドを学び、日々成長を目指しています。
@@ -160,15 +160,63 @@
               <td>1～2年</td>
             </tr>
             <tr>
-              <td>CSS3</td>
+              <td>React.js</td>
               <td>★★★☆☆</td>
-              <td>2年</td>
+              <td>1～2年</td>
+            </tr>
+            <tr>
+              <td>typeScript</td>
+              <td>★☆☆☆☆</td>
+              <td>学習中</td>
+            </tr>
+          </table>
+          <h6>バックエンド</h6>
+          <table class="m-3">
+            <tr>
+              <th>スキル</th>
+              <th>レベル</th>
+              <th>経験年数</th>
+            </tr>
+            <tr>
+              <td>Node.js</td>
+              <td>★★☆☆☆</td>
+              <td>～1年</td>
+            </tr>
+            <tr>
+              <td>MySQL</td>
+              <td>★★☆☆☆</td>
+              <td>～1年</td>
+            </tr>
+          </table>
+          <h6>データサイエンス</h6>
+          <table class="m-3">
+            <tr>
+              <th>スキル</th>
+              <th>レベル</th>
+              <th>経験年数</th>
+            </tr>
+            <tr>
+              <td>Python(データ分析)</td>
+              <td>★★☆☆☆</td>
+              <td>～1年</td>
+            </tr>
+            <tr>
+              <td>Numpy</td>
+              <td>★☆☆☆☆</td>
+              <td>学習中</td>
+            </tr>
+            <tr>
+              <td>Pandas</td>
+              <td>★☆☆☆☆</td>
+              <td>学習中</td>
+            </tr>
+            <tr>
+              <td>Matplotlib/Seaborn</td>
+              <td>★☆☆☆☆</td>
+              <td>学習中</td>
             </tr>
           </table>
 
-          <p>
-            ・動的なWebアプリケーションの構築が可能で、ユーザーとのインタラクションを実装します。
-          </p>
         </div>
       </div>
 
@@ -194,12 +242,14 @@
                   >ver.01</a
                 >もあるんです、初めての作品です🔰
               </p>
-              <a
-                href="https://yu-rimasui.github.io/work07-portfolio2/"
-                class="btn btn-outline-dark"
-                target="_blank"
-                >Take a look 😊</a
-              >
+              <div>
+                <a
+                  href="https://yu-rimasui.github.io/work07-portfolio2/"
+                  class="btn btn-outline-dark"
+                  target="_blank"
+                  >Take a look 😊</a
+                >
+              </div>
             </div>
           </article>
           <article class="card my-3">
@@ -211,12 +261,14 @@
                 好みの雰囲気を創造しながら作成しました。<br />
                 お母さんの夢、いつか実現させてあげたい🙄
               </p>
-              <a
-                href="https://yu-rimasui.github.io/work03_chi-cafe/"
-                class="btn btn-outline-dark"
-                target="_blank"
-                >Take a look ☕</a
-              >
+              <div>
+                <a
+                  href="https://yu-rimasui.github.io/work03_chi-cafe/"
+                  class="btn btn-outline-dark"
+                  target="_blank"
+                  >Take a look ☕</a
+                >
+              </div>
             </div>
           </article>
           <article class="card my-3">
@@ -227,12 +279,14 @@
                 遊び心で作成した電卓アプリです。<br />
                 本来の電卓にはない不思議なボタンを盛り込みました。ぜひ押してみてください🎵
               </p>
-              <a
-                href="https://yu-rimasui.github.io/work04_calculator/"
-                class="btn btn-outline-dark"
-                target="_blank"
-                >Take a look 👀
-              </a>
+              <div>
+                <a
+                  href="https://yu-rimasui.github.io/work04_calculator/"
+                  class="btn btn-outline-dark"
+                  target="_blank"
+                  >Take a look 👀
+                </a>
+              </div>
             </div>
           </article>
           <article class="card my-3">
@@ -244,12 +298,14 @@
                 イベントバッチの表示方法やイベントの色は、特にこだわりました。<br />
                 リンクでは、WebAPIを使用しており、Web上でのCRUD操作が可能です。ぜひお試しください✨
               </p>
-              <a
-                href="https://yu-rimasui.github.io/scheduleApp/"
-                class="btn btn-outline-dark"
-                target="_blank"
-                >Take a look 📅
-              </a>
+              <div>
+                <a
+                  href="https://yu-rimasui.github.io/scheduleApp/"
+                  class="btn btn-outline-dark"
+                  target="_blank"
+                  >Take a look 📅
+                </a>
+              </div>
             </div>
           </article>
           <article class="card my-3">
@@ -257,17 +313,19 @@
             <div class="card-body">
               <h5 class="card-title fw-bold ff_JS">Reminder App</h5>
               <p class="card-text">
-                卒業制作（未完成）<br />
-                タスク管理する管理者と、タスクを閲覧するユーザーに機能が分かれていて、
-                一定のコミュニティに対して、タスクの一括管理ができます。<br />
-                ログイン機能など実装したい機能がたくさん追加される予定(？)
+                リマインダーアプリ<br />
+                タスク管理する管理者と、タスクを閲覧するユーザーに機能を分け、
+                一定のコミュニティに対して、タスクの一括管理を可能にしました。<br />
+                ログイン機能なども実装したい😋
               </p>
-              <a
-                href="https://yu-rimasui.github.io/work06_reminder/"
-                class="btn btn-outline-dark"
-                target="_blank"
-                >Take a look ⌛
-              </a>
+              <div>
+                <a
+                  href="https://yu-rimasui.github.io/work06_reminder/"
+                  class="btn btn-outline-dark"
+                  target="_blank"
+                  >Take a look ⌛
+                </a>
+              </div>  
             </div>
           </article>
         </div>
